--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sans Classic Parts Loyalty Card</title>
+    
+    <!-- Orbitron Font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -16,6 +20,7 @@
             margin: 0;
             padding: 20px;
         }
+
         .card-container {
             width: 600px;
             height: auto;
@@ -25,6 +30,7 @@
             gap: 20px;
             margin-bottom: 20px;
         }
+
         .card-face {
             width: 100%;
             height: 350px;
@@ -41,6 +47,7 @@
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
+
         .card-face::before {
             content: '';
             position: absolute;
@@ -51,35 +58,43 @@
             background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0) 60%);
             z-index: 1;
         }
+
         .card-header {
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
             z-index: 2;
         }
+
         .brand-info {
             text-align: right;
         }
+
         .brand-name {
             font-size: 28px;
             font-weight: bold;
         }
+
         .membership-type {
             font-size: 18px;
             margin-top: 5px;
         }
+
         .member-info {
             z-index: 2;
         }
+
         .member-name-label {
             font-size: 18px;
             margin-bottom: 5px;
             font-weight: bold;
         }
+
         .member-name-value {
             font-size: 32px;
             font-weight: bold;
         }
+
         .card-number {
             background-color: black;
             color: white;
@@ -94,7 +109,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            font-family: 'Orbitron', sans-serif; /* Orbitron font */
         }
+
         .card-number input {
             background-color: black;
             color: white;
@@ -103,34 +120,43 @@
             text-align: center;
             width: 100%;
             max-width: 100%;
+            font-family: 'Orbitron', sans-serif; /* Ensure it's applied to the input as well */
         }
+
         .card-footer {
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
             z-index: 2;
         }
+
         .expiry-date {
             font-size: 16px;
             font-weight: bold;
         }
+
         .editable.expiry-date-value {
             font-weight: normal;
         }
+
         .website {
             font-size: 16px;
         }
+
         .discount-info {
             text-align: right;
         }
+
         .discount {
             font-size: 72px;
             font-weight: bold;
             line-height: 1;
         }
+
         .off-text {
             font-size: 14px;
         }
+
         .editable {
             border: none;
             background: transparent;
@@ -140,6 +166,7 @@
             color: inherit;
             outline: none;
         }
+
         .loyalty-title {
             background-color: black;
             color: white;
@@ -149,18 +176,22 @@
             text-align: center;
             margin: -30px -30px 20px -30px;
         }
+
         .card-info {
             font-size: 18px;
             line-height: 1.5;
             margin-bottom: 20px;
         }
+
         .back-footer {
             text-align: right;
             font-size: 14px;
         }
+
         .footer-brand {
             font-weight: bold;
         }
+
         #downloadButton {
             margin-top: 20px;
             padding: 10px 20px;
@@ -252,7 +283,8 @@
                 
                 html2canvas(document.getElementById('backCard'), { scale: 2 }).then(function(canvas) {
                     const imgData = canvas.toDataURL('image/png');
-                    pdf.addImage(imgData, 'PNG', (pageWidth - imgWidth) / 2, totalHeight, imgWidth, imgHeight);
+                    pdf.addPage();
+                    pdf.addImage(imgData, 'PNG', (pageWidth - imgWidth) / 2, margin, imgWidth, imgHeight);
 
                     pdf.save('loyalty_card.pdf');
                 });
