--- a/index.html
+++ b/index.html
@@ -192,11 +192,17 @@
             font-weight: bold;
         }
 
-        #downloadButton {
+        #printButton {
             margin-top: 20px;
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
+        }
+
+        @media print {
+            #printButton {
+                display: none;
+            }
         }
     </style>
 </head>
@@ -242,7 +248,11 @@
             </div>
         </div>
     </div>
-    <button id="downloadButton">Download PDF</button>
+    <button id="printButton">Print Card</button>
+
+    <!-- Include jsPDF and html2canvas libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 
     <script>
         function formatCardNumber(value) {
@@ -260,8 +270,28 @@
 
         document.getElementById('cardNumber').addEventListener('input', handleCardNumberInput);
 
-        document.getElementById('downloadButton').addEventListener('click', function() {
-            window.print(); // Open print dialogue
+        document.getElementById('printButton').addEventListener('click', function() {
+            html2canvas(document.querySelector('.card-container'), { scale: 2 }).then(function(canvas) {
+                const imgData = canvas.toDataURL('image/png');
+                const pdf = new jsPDF('p', 'pt', 'a4');
+                const pageWidth = pdf.internal.pageSize.width;
+                const pageHeight = pdf.internal.pageSize.height;
+                const cardWidth = 600;
+                const cardHeight = 350;
+                const margin = 20;
+
+                // Add the front card
+                pdf.addImage(imgData, 'PNG', (pageWidth - cardWidth) / 2, margin, cardWidth, cardHeight);
+
+                // Add the back card
+                pdf.addPage();
+                pdf.addImage(imgData, 'PNG', (pageWidth - cardWidth) / 2, margin, cardWidth, cardHeight);
+
+                // Trigger print dialog
+                setTimeout(function() {
+                    window.print();
+                }, 500); // Slight delay to ensure PDF is ready before printing
+            });
         });
     </script>
 </body>
