--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #403f3f;
+            background-color: #ffffff;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -212,7 +212,7 @@
             <div class="card-header">
                 <div class="member-info">
                     <div class="member-name-label">MEMBER NAME</div>
-                    <input type="text" class="editable member-name-value" value="RAVAN">
+                    <input type="text" class="editable member-name-value" value="Customer Name">
                 </div>
                 <div class="brand-info">
                     <div class="brand-name">SANS CLASSIC PARTS</div>
@@ -225,7 +225,7 @@
             <div class="card-footer">
                 <div>
                     <div class="expiry-date">CARD EXPIRY DATE: 
-                        <input type="text" class="editable expiry-date-value" value="00/00/2025" maxlength="10">
+                        <input type="text" class="editable expiry-date-value" value="00/09/2025" maxlength="10">
                     </div>
                     <div class="website">www.sansclassicparts.com</div>
                 </div>
